# hhs-projecten

./: README.md  pyproject.toml
C#/WPFW/IC1/Calc/: Program.cs  SomInt.cs  SomVanSom.cs  (+1 more)
C#/WPFW/IC2/: HC 1.2.pptx
C#/WPFW/IC3/: HC 2.1 publish.pptx
C#/WPFW/IC4/: HC 2.2.pptx
C#/applicatie/: KeerVier.cs
Jaar 2/Databases/: IC2 - Cruise en Vliegen.rtf  IC2 - Huizen.rtf  IC2 - NS.rtf
SEM4/HC's/: pyproject.toml
SEM4/HC's/Week 2/: Practicum_2.2_Opdrachten.ipynb  Practicum_2.3_Opdrachten.ipynb
SEM4/HC's/Week 3/: Practicum_3.1.py
SEM4/PDP/: Portfolio PD3 LC2.docx  Portfolio PD3.docx
SEM4/WC's/Week 10/: Practicum_10.1.cs  Practicum_10.1.py  Uitleg.md  buildmodel_tutorial.ipynb
SEM4/WC's/Week 2/: Practicum_2.1.ipynb  Practicum_2.1_Opdrachten.ipynb  Practicum_2.2_Opdrachten.ipynb  Practicum_2.3_Opdrachten.ipynb
SEM4/WC's/Week 3/: Practicum_3.1.py  Practicum_3.2.py
SEM4/WC's/Week 4/: 4.2.pptx
SEM4/WC's/Week 4 en 5/: Practicum_4.3.ipynb  export.py
SEM4/WC's/Week 5/: Practicum_4.3_Opdrachten.ipynb
SEM4/WC's/Week 7/: AI.docx  test.py
SEM4/WC's/Week 8/: Opdracht_8.1.ipynb  Practicum_8.1.ipynb  Practicum_8.2_opdrachten.ipynb
SEM4/WC's/Week 9/: Practicum_9.1_opdrachten.ipynb  Practicum_9.2.ipynb  Script_W9_1.ipynb
SEM4/WC/Project/: 1. Project Verslag.docx  Datawarehouse SE4.docx  Datawarehouse.ipynb  Project.ipynb  Warehouse_2.ipynb
SEM4/WC/Week 1/: Practicum 1.2.archimate
SEM4/WC/Week 11/: Verslag.docx
SEM4/WC/Week 4 en 5/: Practicum_4.3.ipynb
SEM4/WC/Week 7/: AI_final.docx  Presentatie.pptx  test.py
SEM4/WC/Week 8/: Practicum_8.1.ipynb
(+72 files in other folders)
