[tool.poetry]
name = "hhs-projecten"
version = "0.1.0"
description = ""
authors = ["PepijnvdSteen <22094067@student.hhs.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
